--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,35 @@
-name: test suite
-on: [push, pull_request]
+name: CI - Format, Lint, Test
+
+on:
+  push:
+    branches:
+      - "**"
+  pull_request:
+
+permissions:
+  contents: read
 
 jobs:
-  test:
-    name: cargo test
+  ci:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v6
+      # 1. Checkout code
+      - uses: actions/checkout@v4
+
+      # 2. Install Rust + rustfmt + clippy
       - uses: dtolnay/rust-toolchain@stable
-      - run: cargo test --all-features
+        with:
+          components: rustfmt, clippy
+
+      # 3. --- FORMAT CHECK ---
+      - name: Check code formatting
+        run: cargo fmt --all -- --check
+
+      # 4. --- CLIPPY LINT ---
+      - name: Run clippy
+        run: cargo clippy --all-targets --all-features -- -D warnings
+
+      # 5. --- TEST ---
+      - name: Run tests
+        run: cargo test --all --all-features
