--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,25 +1,26 @@
-# Basic `dependabot.yml` file with
-# minimum configuration for two package managers
-
 version: 2
 updates:
-  # Enable version updates for npm
+  # Enable version updates for Cargo
   - package-ecosystem: "cargo"
-    # Look for `package.json` and `lock` files in the `root` directory
+
     directory: "/"
-    # Check the npm registry for updates every day (weekdays)
+
     schedule:
       interval: "weekly"
+
     commit-message:
-      prefix: chore(deps):
+      prefix: "chore(deps):"
+
     labels: [dependencies, internal]
 
   # Enable version updates for GitHub Actions
   - package-ecosystem: "github-actions"
     directory: "/"
-    # Check for updates once a week
+
     schedule:
       interval: "weekly"
+
     commit-message:
-      prefix: chore(deps):
+      prefix: "chore(deps):"
+
     labels: [dependencies, internal]
