--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
     directory: "/"
 
     schedule:
-      interval: "weekly"
+      interval: "daily"
 
     commit-message:
       prefix: "chore(deps):"
